Fix spacing above bottom navigation, fix header color in form wrapper, vertical align form start instead of centered

--- a/src/components/FormWrapper.module.scss
+++ b/src/components/FormWrapper.module.scss
@@ -7,10 +7,21 @@
 
   .column {
     max-width: 450px;
+    align-self: center;
+  }
+
+  .header {
+    color: var(--kudo-color-primary);
   }
 
   .form {
     max-width: 512px;
+  }
+
+  @media only screen and (max-width: 768px) {
+    .column {
+      align-self: flex-start;
+    }
   }
 }
 
