--- a/src/styles/elements/page.scss
+++ b/src/styles/elements/page.scss
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 768px) {
   .page {
-    height: calc(100vh - 64px);
+    height: calc(100vh - 55px);
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
   }
